force-app/main/default/objects/Order/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Information</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>