force-app/main/default/objects/Order/fields/Assign_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Assign_Facilitator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign to Facilitator</label>
    <type>Checkbox</type>
</CustomField>