force-app/main/default/objects/Order/fields/Assignment_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Error_Message__c</fullName>
    <label>Assignment Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>