force-app/main/default/objects/Order/fields/Big_Desk_Sandbox_Type__c.field-meta.xml
<CustomField>
    <fullName>Big_Desk_Sandbox_Type__c</fullName>
    <description>This field is used to tag orders as Big Desk based on AIC count</description>
    <label>Big Desk Sandbox Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Big Desk 100+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>