force-app/main/default/objects/Order/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>If &apos;Blocked Reason&apos; is populated, order will NOT be playable</description>
    <label>Blocked Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pausing this account for urgent 2FA access elsewhere</fullName>
            </value>
            <value>
                <fullName>Became unblocked on a higher priority order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>