force-app/main/default/objects/Order/fields/Bulk_Case__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Orders (Bulk Case)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>