force-app/main/default/objects/Order/fields/Bulk_Migration_Name__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Migration_Name__c</fullName>
    <formula>Bulk_Migration__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bulk Migration Name</label>
    <type>Text</type>
</CustomField>