force-app/main/default/objects/Order/fields/Cannot_Find_Industry__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Find_Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>cannot_find_industry</description>
    <label>Cannot Find Industry</label>
    <type>Checkbox</type>
</CustomField>