force-app/main/default/objects/Order/fields/Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Status__c</fullName>
    <label>Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With Facilitator- Follow up date</fullName>
            </value>
            <value>
                <fullName>With Advocate</fullName>
            </value>
            <value>
                <fullName>Ready for Facilitator</fullName>
            </value>
            <value>
                <fullName>With Facilitator</fullName>
            </value>
            <value>
                <fullName>Checklists Completed</fullName>
            </value>
            <value>
                <fullName>Facilitator Unassigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>