force-app/main/default/objects/Order/fields/Closed_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Closed_Canceled__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed: Canceled</label>
    <type>Date</type>
</CustomField>