force-app/main/default/objects/Order/fields/Communication_Required__c.field-meta.xml
<CustomField>
    <fullName>Communication_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Internal communication</description>
    <label>Communication Required</label>
    <type>Checkbox</type>
</CustomField>