force-app/main/default/objects/Order/fields/Communication_Required_Fac__c.field-meta.xml
<CustomField>
    <fullName>Communication_Required_Fac__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for facilitator if he/she is @mention in checklist comments</description>
    <label>Communication Required Fac</label>
    <type>Checkbox</type>
</CustomField>