force-app/main/default/objects/Order/fields/Contractor_Count__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Contractor Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>