force-app/main/default/objects/Order/fields/CSV_For_Order__c.field-meta.xml
<CustomField>
    <fullName>CSV_For_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSV For Order</label>
    <referenceTo>Bulk_Order_CSV_Data__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>