force-app/main/default/objects/Order/fields/Custom_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Custom_Deductions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Custom Deductions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>