force-app/main/default/objects/Order/fields/Customer_Aware_of_Shorter_timeline__c.field-meta.xml
<CustomField>
    <fullName>Customer_Aware_of_Shorter_timeline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Customer has agreed to complete final steps on run date if needed</inlineHelpText>
    <label>Customer Aware of Shorter timeline?</label>
    <type>TextArea</type>
</CustomField>