force-app/main/default/objects/Order/fields/Data_Entry_Assist__c.field-meta.xml
<CustomField>
    <fullName>Data_Entry_Assist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[User].Is_Migration_Specialist__c must be true.</description>
    <label>Facilitator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Specialist_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>