force-app/main/default/objects/Order/fields/Deductions_List__c.field-meta.xml
<CustomField>
    <fullName>Deductions_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deductions List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>