force-app/main/default/objects/Order/fields/Exception_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Request_Reason__c</fullName>
    <label>Exception Request Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant has been let go</fullName>
            </value>
            <value>
                <fullName>Contract ending with current payroll provider</fullName>
            </value>
            <value>
                <fullName>Current payroll provider shut down</fullName>
            </value>
            <value>
                <fullName>Business plan Quota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>