force-app/main/default/objects/Order/fields/External_Order__c.field-meta.xml
<CustomField>
    <fullName>External_Order__c</fullName>
    <formula>if(AND(
	OR(Text(Employees_With_Multiple_Tax_Jurisdiction__c) == &apos;No&apos;,Text(Employees_With_Multiple_Tax_Jurisdiction__c) == null), 
	OR(COVID_19_relief_programs__c == &apos;No&apos;,COVID_19_relief_programs__c == null)
	),false,true
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Order</label>
    <type>Checkbox</type>
</CustomField>