force-app/main/default/objects/Order/fields/Facilitator_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Due_Date__c</fullName>
    <label>Facilitator Due Date</label>
    <type>Date</type>
</CustomField>