force-app/main/default/objects/Order/fields/Facilitator_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Follow_Up_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facilitator Follow Up Date</label>
    <type>Date</type>
</CustomField>