force-app/main/default/objects/Order/fields/Facilitator_Follow_Up_Date_Reason__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Follow_Up_Date_Reason__c</fullName>
    <label>Facilitator Follow Up Date Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EPD JIRA</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>