force-app/main/default/objects/Order/fields/Facilitator_Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Follow_Up_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Facilitator Follow Up Notes</label>
    <type>TextArea</type>
</CustomField>