force-app/main/default/objects/Order/fields/Facilitator_Name__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Name__c</fullName>
    <formula>Data_Entry_Assist__r.FirstName + &quot; &quot;+ Data_Entry_Assist__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facilitator Name</label>
    <type>Text</type>
</CustomField>