force-app/main/default/objects/Order/fields/Facilitator_Work_Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Facilitator_Work_Start_DateTime__c</fullName>
    <description>Set for the first time when facilitator views the checklists</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Facilitator Work Start DateTime</label>
    <type>DateTime</type>
</CustomField>