force-app/main/default/objects/Order/fields/Financial_Health_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Financial_Health_Benefits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Health Benefits</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>