force-app/main/default/objects/Order/fields/First_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Check_Date__c</fullName>
    <description>MIGRATION_ATTRIBUTES 
first_check_date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Check Date</label>
    <type>Date</type>
</CustomField>