force-app/main/default/objects/Order/fields/First_Check_Week_From_Today_2__c.field-meta.xml
<CustomField>
    <fullName>First_Check_Week_From_Today_2__c</fullName>
    <formula>(
(FLOOR((First_Check_Date__c-DATE(YEAR(First_Check_Date__c),1,1)+ MOD(DATE(YEAR(First_Check_Date__c),1,1) - DATE(2006, 1, 1), 7) )/7)+1)
+ 
IF(YEAR(First_Check_Date__c)= YEAR(Today()),0,52
)
)
-
(FLOOR( (Today() - DATE(YEAR(Today()),1,1) + MOD( DATE(YEAR(Today()),1,1) - DATE(2006, 1, 1), 7)) / 7) + 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Check Week From Today 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>