force-app/main/default/objects/Order/fields/First_Payroll_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>First_Payroll_Call_Scheduled__c</fullName>
    <label>First Payroll Call Scheduled?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Account (no call needed)</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>