force-app/main/default/objects/Order/fields/Follow_Up_Notes__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Advocate Follow Up Notes</label>
    <type>TextArea</type>
</CustomField>