force-app/main/default/objects/Order/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>ID of company migration record in Zen Payroll</description>
    <externalId>true</externalId>
    <label>ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>