force-app/main/default/objects/Order/fields/Industry_Title__c.field-meta.xml
<CustomField>
    <fullName>Industry_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Industry Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>