force-app/main/default/objects/Order/fields/Invite_Contractors_Via_Email__c.field-meta.xml
<CustomField>
    <fullName>Invite_Contractors_Via_Email__c</fullName>
    <description>When would you like us to invite your contractors to Gusto?</description>
    <inlineHelpText>When would you like us to invite your contractors to Gusto?</inlineHelpText>
    <label>Invite Contractors Via Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Add emails but don&apos;t invite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>