force-app/main/default/objects/Order/fields/Invite_Employees_Via_Email__c.field-meta.xml
<CustomField>
    <fullName>Invite_Employees_Via_Email__c</fullName>
    <description>When would you like us to invite your current employees to Gusto?</description>
    <inlineHelpText>When would you like us to invite your current employees to Gusto?</inlineHelpText>
    <label>Invite Employees Via Email</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add and invite</fullName>
            </value>
            <value>
                <fullName>Add but don&apos;t invite</fullName>
            </value>
            <value>
                <fullName>Don&apos;t add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>