force-app/main/default/objects/Order/fields/Jira_Link__c.field-meta.xml
<CustomField>
    <fullName>Jira_Link__c</fullName>
    <description>When &quot;Facilitator Follow Up Date Reason&quot; is equals to EPD JIRA then this field is required.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When &quot;Facilitator Follow Up Date Reason&quot; is equals to EPD JIRA then this field is required.</inlineHelpText>
    <label>Jira Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>