force-app/main/default/objects/Order/fields/Last_Assigned_To_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_To_Facilitator__c</fullName>
    <description>Date/Time tag of last time &quot;Assigned to Facilitator&quot; was checked</description>
    <label>Last Assigned To Facilitator Date/Time</label>
    <type>DateTime</type>
</CustomField>