force-app/main/default/objects/Order/fields/Migration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Migration_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Migration Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>