force-app/main/default/objects/Order/fields/Multi_EIN__c.field-meta.xml
<CustomField>
    <fullName>Multi_EIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-EIN?</label>
    <type>Checkbox</type>
</CustomField>