force-app/main/default/objects/Order/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please provide notes when more than one subreason is selected</inlineHelpText>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>