force-app/main/default/objects/Order/fields/of_Benefits__c.field-meta.xml
<CustomField>
    <fullName>of_Benefits__c</fullName>
    <label># of Benefits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>