force-app/main/default/objects/Order/fields/Onboarding_Steps_Completed__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Steps_Completed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Onboarding Steps Completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>