force-app/main/default/objects/Order/fields/Opportunity_Team__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team__c</fullName>
    <formula>IF( AND(Opportunity.RecordType.DeveloperName = &apos;Acquisition&apos;, OR( ISBLANK(Opportunity.NumberOfEmployees__c)  ,Opportunity.NumberOfEmployees__c &lt; 10), Opportunity.Sold_By__c = null,Opportunity.Referred_By__c=null),
&apos;Small Business Sales&apos;,
IF( OR(AND(Opportunity.RecordType.DeveloperName = &apos;Acquisition&apos;,Opportunity.NumberOfEmployees__c &gt;= 10,Opportunity.Sold_By__c = null, Opportunity.Referred_By__c= null, NOT( ISPICKVAL(Opportunity.LeadSource, &apos;P2P Referral&apos;))), AND(Opportunity.NumberOfEmployees__c &gt;= 10,Opportunity.Sold_By__c = null, Opportunity.Referred_By__c= null) ),
&apos;Mid Market Sales&apos;,
IF(AND(Opportunity.RecordType.DeveloperName = &apos;Acquisition&apos;, OR(Opportunity.Referred_By__c != null,Opportunity.Sold_By__c != null),OR(ISPICKVAL(Opportunity.LeadSource, &apos;P2P Referral&apos;),
OR(Opportunity.Owner.UserRole.DeveloperName = &apos;sales_partner_am_xx&apos; ,Opportunity.Owner.UserRole.DeveloperName = &apos;sales_partner_ae_xx&apos; ,Opportunity.Owner.UserRole.DeveloperName = &apos;sales_partner_xx_xx_mgr&apos;))),
&apos;Partner Sales&apos;,
IF(Opportunity.NumberOfEmployees__c &gt;= 10,&apos;Mid Market Sales&apos;,&apos;Small Business Sales&apos;) 

) ))</formula>
    <label>Opportunity Team</label>
    <type>Text</type>
</CustomField>