force-app/main/default/objects/Order/fields/Original_Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Check_Date__c</fullName>
    <description>To keep track of the first check date set initially.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Original Check Date</label>
    <type>Date</type>
</CustomField>