force-app/main/default/objects/Order/fields/Other_Financial_Benefits_Currently_Offer__c.field-meta.xml
<CustomField>
    <fullName>Other_Financial_Benefits_Currently_Offer__c</fullName>
    <label>Other Financial Benefits Currently Offer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>