force-app/main/default/objects/Order/fields/Other_Health_Benefits_Currently_Offered__c.field-meta.xml
<CustomField>
    <fullName>Other_Health_Benefits_Currently_Offered__c</fullName>
    <label>Other Health Benefits Currently Offered</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>