force-app/main/default/objects/Order/fields/Pay_Rates__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rates__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pay Rates</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>