force-app/main/default/objects/Order/fields/Pay_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Pay_Schedule__c</fullName>
    <label>Pay Schedule</label>
    <length>80</length>
    <type>Text</type>
</CustomField>