force-app/main/default/objects/Order/fields/Payroll_Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Run_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payroll Run Date</label>
    <type>Date</type>
</CustomField>