force-app/main/default/objects/Order/fields/Point_of_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Point_of_Contact_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Point of Contact(Name)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>