force-app/main/default/objects/Order/fields/Previous_Payroll_Provider_Collect_Option__c.field-meta.xml
<CustomField>
    <fullName>Previous_Payroll_Provider_Collect_Option__c</fullName>
    <description>possible values are &apos;upload&apos;, &apos;admin&apos;, &apos;credentials&apos;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Payroll Provider Collect Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>