force-app/main/default/objects/Order/fields/PT_Deductions_Complexity_Score__c.field-meta.xml
<CustomField>
    <fullName>PT_Deductions_Complexity_Score__c</fullName>
    <label>PT Deductions Complexity Score</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>