force-app/main/default/objects/Order/fields/Ready_For_Facilitator_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Facilitator_Due_Date__c</fullName>
    <description>This will allow Advocates to ensure they are meeting this new SLA.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Ready For Facilitator Due Date</label>
    <type>Date</type>
</CustomField>