force-app/main/default/objects/Order/fields/Reassign_Facilitator_For_OOO__c.field-meta.xml
<CustomField>
    <fullName>Reassign_Facilitator_For_OOO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign Facilitator For OOO</label>
    <type>Checkbox</type>
</CustomField>