force-app/main/default/objects/Order/fields/Reimbursements_List__c.field-meta.xml
<CustomField>
    <fullName>Reimbursements_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reimbursements List</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>