force-app/main/default/objects/Order/fields/Requested_Pay_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Pay_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requested Pay Date</label>
    <type>Date</type>
</CustomField>