force-app/main/default/objects/Order/fields/Sales_Follow_Up_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sales_Follow_Up_Reason__c</fullName>
    <description>When a Order is moved to Sales Follow, one of these reasons should be selected.</description>
    <inlineHelpText>Please provide a Sales Follow Up Reason</inlineHelpText>
    <label>Sales Follow Up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirm APD Other</fullName>
            </value>
            <value>
                <fullName>Exception Request Follow Up</fullName>
            </value>
            <value>
                <fullName>Gather The Basics | Incomplete In-App</fullName>
            </value>
            <value>
                <fullName>Incorrect Offline Docs</fullName>
            </value>
            <value>
                <fullName>Unable to Access Provider</fullName>
            </value>
            <value>
                <fullName>Unresponsive Admin for Missing Info</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>