force-app/main/default/objects/Order/fields/Tax_Payer_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Payer_Type__c</fullName>
    <label>Tax Payer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tax_Payer_Types</valueSetName>
    </valueSet>
</CustomField>