force-app/main/default/objects/Order/fields/Team_Invitation_Preference__c.field-meta.xml
<CustomField>
    <fullName>Team_Invitation_Preference__c</fullName>
    <description>Contains ZP Company Migration  JSON &quot;how_do_you_want_us_to_sign_in_to_your_account&quot; node value.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Invitation Preference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>