force-app/main/default/objects/Order/fields/Total_Age__c.field-meta.xml
<CustomField>
    <fullName>Total_Age__c</fullName>
    <formula>Closed_Payroll_Run__c -  EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>