force-app/main/default/objects/Order/fields/Total_AIC_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_AIC_Count__c</fullName>
    <description>This field holds the summation on three count fields &quot;Contractor_Count__c&quot;, &quot;Inactive_Employee_Count__c &quot;,&quot;Active_Employee_Count__c&quot;</description>
    <formula>Contractor_Count__c  +  Inactive_Employee_Count__c  +  Active_Employee_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total AIC Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>