force-app/main/default/objects/Order/fields/Total_Checklists_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Checklists_Count__c</fullName>
    <description>total selected checkilsts</description>
    <label>Total Checklists Count</label>
    <summaryFilterItems>
        <field>Order_Facilitator_Checklist__c.Is_Checked__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Order_Facilitator_Checklist__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>