force-app/main/default/objects/Order/fields/Transportation_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Benefits__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transportation Benefits</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>