force-app/main/default/objects/Order/fields/Which_Health_Benefits_Currently_Offered__c.field-meta.xml
<CustomField>
    <fullName>Which_Health_Benefits_Currently_Offered__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Which Health Benefits Currently Offered</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>