force-app/main/default/objects/Order/fields/Xero_Migration_Selection__c.field-meta.xml
<CustomField>
    <fullName>Xero_Migration_Selection__c</fullName>
    <label>Xero Migration Selection</label>
    <length>255</length>
    <type>Text</type>
</CustomField>