force-app/main/default/objects/Order/recordTypes/Benefit_Change.recordType-meta.xml
<RecordType>
    <fullName>Benefit_Change</fullName>
    <active>false</active>
    <label>Benefit Change</label>
</RecordType>