force-app/main/default/objects/Order/recordTypes/Company_Migration.recordType-meta.xml
<RecordType>
    <fullName>Company_Migration</fullName>
    <active>true</active>
    <label>Company Migration</label>
</RecordType>