force-app/main/default/objects/Order/recordTypes/New_Plan.recordType-meta.xml
<RecordType>
    <fullName>New_Plan</fullName>
    <active>false</active>
    <label>New Plan</label>
</RecordType>