force-app/main/default/objects/Order/recordTypes/Partner_Migration.recordType-meta.xml
<RecordType>
    <fullName>Partner_Migration</fullName>
    <active>false</active>
    <label>Partner Migration</label>
</RecordType>