force-app/main/default/objects/Order/recordTypes/Renewal.recordType-meta.xml
<RecordType>
    <fullName>Renewal</fullName>
    <active>false</active>
    <label>Renewal</label>
</RecordType>