force-app/main/default/objects/Order/validationRules/CheckPrimaryContact.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckPrimaryContact</fullName>
    <active>true</active>
    <description>Primary Contact should be selected before submitting Order.</description>
    <errorConditionFormula>AND( ISBLANK(Bulk_Migration__c), ISCHANGED(Status), ISPICKVAL( Status , &apos;Sales Submitted&apos;), ISBLANK( Primary_Contact__c ) )</errorConditionFormula>
    <errorMessage>Please select a Primary Point of Contact in the Opportunity Contact Roles section before submitting Order for approval.</errorMessage>
</ValidationRule>