force-app/main/default/objects/Order/validationRules/Del_ay_Date_Extension_Must_Have_a_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Del_ay_Date_Extension_Must_Have_a_Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
TEXT(PRIORVALUE( Requested_Pay_Date__c))&lt;&gt;&quot;&quot;, 
ISCHANGED( Requested_Pay_Date__c),
(Requested_Pay_Date__c &gt; PRIORVALUE(Requested_Pay_Date__c)),
(ISBLANK(TEXT(Pay_Date_Extension_Reason__c))) 
)</errorConditionFormula>
    <errorMessage>Required: Pay Date Extension Reason - Please use Extend Pay Day Button to fill extension reason</errorMessage>
</ValidationRule>